[package]
name = "my_libloading"
version = "0.1.0"
edition = "2024"

[dependencies]
arc-atomic = {version = "0.1.0", optional = true}
windows-sys = {version = "0.59.0", features = ["Win32_System_LibraryLoader", "Win32_Foundation"]}

[features]
# default = ["reloadable"]
reloadable = ["dep:arc-atomic"]

[profile.dev.package."*"]
opt-level = 3

